--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestBench\TestBench.csproj" />
+  </ItemGroup>
+
 </Project>
