Починены вылеты, но дискретность ввремени влияет на температуру

--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\TestBench\TestBench.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="configuration.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
